--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "secret = 'Sba121' #reading from database"
+    "secret = '****' #reading from database"
    ]
   },
   {
